# docs/swagger.json
@@ -4,23 +4,8 @@
         "contact": {}
     },
     "paths": {
-        "/index": {
-            "get": {
-                "tags": [
-                    "index"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/user/createUser": {
-            "get": {
+            "post": {
                 "tags": [
                     "用户"
                 ],
@@ -30,13 +15,13 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
-                        "in": "query"
+                        "in": "formData"
                     },
                     {
                         "type": "string",
                         "description": "password",
                         "name": "password",
-                        "in": "query"
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -74,7 +59,7 @@
             }
         },
         "/user/getUser": {
-            "get": {
+            "post": {
                 "tags": [
                     "用户"
                 ],
@@ -84,13 +69,13 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
-                        "in": "query"
+                        "in": "formData"
                     },
                     {
                         "type": "string",
                         "description": "password",
                         "name": "password",
-                        "in": "query"
+                        "in": "formData"
                     }
                 ],
                 "responses": {
