# router/router.go
@@ -13,13 +13,20 @@ func Router() *gin.Engine {
 	r := gin.Default()
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserList)
-	r.GET("/user/getUser", service.GetUser)
-	r.GET("/user/createUser", service.CreateUser)
+	r.POST("/user/getUser", service.GetUser)
+	r.POST("/user/createUser", service.CreateUser)
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
 
 	r.GET("/message/sendMsg", service.SendMsg)
+
+	// 静态文件
+	r.Static("/asset", "asset/")
+	r.LoadHTMLGlob("views/**/*")
+	r.GET("/", service.GetIndex)
+	r.GET("/index", service.GetIndex)
+	r.GET("/toRegister", service.ToRegister)
+
 	return r
 }
