# service/index.go
@@ -1,13 +1,29 @@
 package service
 
-import "github.com/gin-gonic/gin"
+import (
+	"fmt"
+	"net/http"
+	"text/template"
 
-// GetIndex godoc
-// @Tags         index
-// @Success      200  {string}  welcome
-// @Router       /index [get]
+	"github.com/gin-gonic/gin"
+)
+
 func GetIndex(ctx *gin.Context) {
-	ctx.JSON(200, gin.H{
-		"message": "hello world",
-	})
+	tpl, err := template.ParseFiles("index.html", "views/chat/head.html")
+	if err != nil {
+		fmt.Println(err)
+		ctx.AbortWithStatus(http.StatusNotFound)
+		return
+	}
+	tpl.Execute(ctx.Writer, nil)
+}
+
+func ToRegister(ctx *gin.Context) {
+	tpl, err := template.ParseFiles("views/user/register.html")
+	if err != nil {
+		fmt.Println(err)
+		ctx.AbortWithStatus(http.StatusNotFound)
+		return
+	}
+	tpl.Execute(ctx.Writer, "register")
 }
